--- a/iib-helm/ibm-integration-bus-exp/Chart.yaml
+++ b/iib-helm/ibm-integration-bus-exp/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
-description: IBM Integration Bus for application integration, routing and transformation (EXPERIMENTAL)
-icon: https://raw.githubusercontent.com/ot4i/iib-helm/master/ibm-integration-bus-dev/IBM_Integration_Bus_Icon.svg?sanitize=true
-name: ibm-integration-bus-exp
+description: IBM Integration Bus for application integration, routing and transformation (DEMO)
+#icon: https://raw.githubusercontent.com/ot4i/iib-helm/master/ibm-integration-bus-dev/IBM_Integration_Bus_Icon.svg?sanitize=true
+icon: https://raw.githubusercontent.com/styblope/iib-icp-demo/master/iib-helm/ibm-integration-bus-exp/IBM_Integration_Bus_Icon.svg
+name: ibm-integration-bus-demo
 tillerVersion: '>=2.4.1'
 version: 1.0.0
