--- a/iib-statefulset.yaml
+++ b/iib-statefulset.yaml
@@ -29,10 +29,8 @@ spec:
           value: "/tmp/globalcache-policy/globalcache_policy.xml"
         - name: CACHE_PORT_RANGE
           value: "2800-2819"
-        - name: MQ_QMGR_NAME
-          value: MQ1
         image: mycluster.icp:8500/default/iib-mq:10.0.0.10
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 2800
           name: globalcache0
@@ -45,9 +43,9 @@ spec:
         - containerPort: 7800
           name: serverlistener
           protocol: TCP
-        # - containerPort: 7080
-        #   name: nodelistener
-        #   protocol: TCP
+        - containerPort: 7080
+          name: nodelistener
+          protocol: TCP
         - containerPort: 4414
           name: webui
           protocol: TCP
@@ -68,20 +66,20 @@ spec:
 #           successThreshold: 1
 #           timeoutSeconds: 1
 
-#         readinessProbe:
-#           failureThreshold: 3
-#           tcpSocket:
-#             port: 7800
-#           initialDelaySeconds: 15
-#           periodSeconds: 10
-#           successThreshold: 1
-#           timeoutSeconds: 1
+        readinessProbe:
+          failureThreshold: 3
+          tcpSocket:
+            port: 7800
+          initialDelaySeconds: 15
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
         livenessProbe:
           httpGet:
             path: /
             port: 4414
             scheme: HTTP
-          initialDelaySeconds: 240
+          initialDelaySeconds: 120
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 1
@@ -106,3 +104,5 @@ spec:
       - name: bars
         persistentVolumeClaim:
           claimName: iib-pvc
+  updateStrategy:
+    type: RollingUpdate
