modify service yaml

--- a/iib-service.yaml
+++ b/iib-service.yaml
@@ -24,39 +24,45 @@ spec:
   - name: mqlistener
     port: 1414
     protocol: TCP
-  selector:
-    app: iib
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: iib
-  name: iib-loadbalancer
-spec:
-  ports:
-  - name: webui
-    port: 4414
-    protocol: TCP
-    targetPort: 4414
-  - name: mqwebui
-    port: 9443
-    protocol: TCP
-    targetPort: 9443
-  - name: mqlistener
-    port: 1414
-    protocol: TCP
-    targetPort: 1414
   - name: serverlistener
     port: 7800
     protocol: TCP
-    targetPort: 7800
   - name: nodelistener
     port: 7080
     protocol: TCP
-    targetPort: 7080
   selector:
     app: iib
-  type: NodePort
+
+# ---
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   labels:
+#     app: iib
+#   name: iib-loadbalancer
+# spec:
+#   ports:
+#   - name: webui
+#     port: 4414
+#     protocol: TCP
+#     targetPort: 4414
+#   - name: mqwebui
+#     port: 9443
+#     protocol: TCP
+#     targetPort: 9443
+#   - name: mqlistener
+#     port: 1414
+#     protocol: TCP
+#     targetPort: 1414
+#   - name: serverlistener
+#     port: 7800
+#     protocol: TCP
+#     targetPort: 7800
+#   - name: nodelistener
+#     port: 7080
+#     protocol: TCP
+#     targetPort: 7080
+#   selector:
+#     app: iib
+#   type: NodePort
