iib logs redirection to docker log, using rsyslog and tail -f

--- a/iib-mq-docker/10-iib_rsyslog.conf
+++ b/iib-mq-docker/10-iib_rsyslog.conf
@@ -1,3 +1,3 @@
 # IIB log redirection to STDOUT for Docker's default log collector
 
-:programname, isequal, "IIB" -/proc/self/fd/1
+:programname, isequal, "IIB" -/var/log/docker
