--- a/iib-mq-docker/Dockerfile
+++ b/iib-mq-docker/Dockerfile
@@ -81,8 +81,7 @@ RUN mkdir /opt/ibm \
 # Configure system
 COPY kernel_settings.sh /tmp/
 RUN echo "IIB_10:" > /etc/debian_chroot \
-  && touch /var/log/syslog \
-  && chown syslog:adm /var/log/syslog \
+  && touch /var/log/syslog && chown syslog:adm /var/log/syslog \
   && chmod +x /tmp/kernel_settings.sh;sync \
   && /tmp/kernel_settings.sh \
   # Create user to run as
