docker log formattig - pass only the  parameter of iib syslog

--- a/iib-mq-docker/10-iib_rsyslog.conf
+++ b/iib-mq-docker/10-iib_rsyslog.conf
@@ -1,3 +1,4 @@
 # IIB log redirection to STDOUT for Docker's default log collector
+$template dockerFormat,"%msg:2:$%\n"
 
-:programname, isequal, "IIB" -/var/log/docker
+:programname, isequal, "IIB" -/var/log/docker;dockerFormat
